switch to app as prefix; remove nrwl nx welcome component

--- a/apps/app/.eslintrc.json
+++ b/apps/app/.eslintrc.json
@@ -17,7 +17,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "reusable-mat-forms",
+            "prefix": "app",
             "style": "kebab-case"
           }
         ]
