--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.3",
+    "ng-mocks": "^14.5.0",
     "nx": "15.4.1",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
